Fixed overflow issues on whole website make it pixel perfect

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box!important;
+}
+
 
 @layer utilities {
   .grid-containerxl {
